# CRM-courses

./: .env.example  .envexample  .gitignore  .pylintrc  MakeFile  README.md  docker-compose.yml
bot/: Dockerfile  requirements.txt  run.py
bot/bot_requests/: __init__.py  access_token.py  auth.py  courses.py  enrollments.py  get_summary_users.py  lessons.py  user_chat.py  users.py
bot/constants/: __init__.py  bot_message.py  keyboards_text.py
server/: Dockerfile  pyproject.toml  requirements.txt
server/apps/courses/: routers.py  tasks.py
server/apps/courses/admin/: __init__.py  course.py  enrollment.py  lesson.py
server/apps/courses/constants/: __init__.py  errors.py
server/apps/courses/models/: __init__.py  course.py  enrollment.py  lesson.py
server/apps/courses/permissions/: __init__.py  course.py
server/apps/courses/serializers/: __init__.py  course.py  enrollment.py  lesson.py
server/apps/courses/tests/: __init__.py  course.py
server/apps/courses/utils/: __init__.py  func_for_celery.py
server/apps/courses/viewsets/: __init__.py  course.py  enrollment.py  lesson.py
server/apps/users/admin/: __init__.py  user.py  user_chat.py
server/apps/users/models/: __init__.py  user.py  user_chat.py
server/apps/users/serializers/: __init__.py  user.py  user_chat.py
server/apps/users/urls/: users_summary.py
server/apps/users/views/: __init__.py  user_chat.py  users_summary.py
server/config/: api_urls.py  celery.py  swagger.py  urls.py
server/config/settings/: installed_apps.py  local.py  settings.py
server/templates/admin/: lesson_calendar.html
(+8 files in other folders)
