[tool.poetry]
name = "crm-courses"
version = "0.1.0"
description = ""
authors = ["YaroslavIonin <ioninyaroslav22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dj-database-url = "^2.2.0"
django = "^5.1.1"
django-cors-headers = "^4.4.0"
django-filter = "^24.3"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^8.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
